tests/liquid/pos/typealias/talias-03.js
/*@ predicate gt(x, y) = x >= y                */
/*@ type gArray[x]     = [{number | gt(v, x)}] */

/*@ ga :: gArray[0] */
var ga = [0,0,0,0];
